force-app/main/default/objects/p2s_base1__Configuration__c/p2s_base1__Configuration__c.object-meta.xml
<CustomObject>
    <label>Configuration</label>
    <nameField>
        <label>Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>