force-app/main/default/objects/p2s_base1__Configuration__c/fields/p2s_base1__AccountAttributionWhereContact__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__AccountAttributionWhereContact__c</fullName>
    <description>Enter the criteria that should be added to the query for eligible contacts to attribute (i.e. RecordTypeID = &apos;xyz&apos;)</description>
    <inlineHelpText>Enter the criteria that should be added to the query for eligible contacts to attribute (i.e. RecordTypeID = &apos;xyz&apos;)</inlineHelpText>
    <label>Account Attribution Where Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>