force-app/main/default/objects/p2s_base1__Configuration__c/fields/p2s_base1__Active__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>