force-app/main/default/objects/p2s_base1__Configuration__c/fields/p2s_base1__ActivitiesInfluenceTimePeriod__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__ActivitiesInfluenceTimePeriod__c</fullName>
    <defaultValue>365</defaultValue>
    <label>Engagio Activities Influence Time Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>