force-app/main/default/objects/p2s_base1__Configuration__c/fields/p2s_base1__Default__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox indicates which configuration settings will be used by default</description>
    <inlineHelpText>This checkbox indicates which configuration settings will be used by default</inlineHelpText>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>