force-app/main/default/objects/p2s_base1__Configuration__c/fields/p2s_base1__ExistingAccountStatusField__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__ExistingAccountStatusField__c</fullName>
    <description>Use this field to dynamically determine which field should be used as the Account Status field</description>
    <inlineHelpText>Use this field to dynamically determine which field should be used as the Account Status field</inlineHelpText>
    <label>Existing Account Status Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>