force-app/main/default/objects/p2s_base1__Configuration__c/fields/p2s_base1__FirstTouchPositionWeight__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__FirstTouchPositionWeight__c</fullName>
    <defaultValue>40</defaultValue>
    <description>Use this field to define how much attribution will be applied to the first touch campaign</description>
    <inlineHelpText>Use this field to define how much attribution will be applied to the first touch campaign</inlineHelpText>
    <label>First Touch Position Weight</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>