force-app/main/default/objects/p2s_base1__Configuration__c/fields/p2s_base1__RequireContactRoleOnOpportunity__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__RequireContactRoleOnOpportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box to require at least one ContactRole record to be on the Opportunity when the lifecycle stage is transitioned</description>
    <inlineHelpText>Check this box to require at least one ContactRole record to be on the Opportunity when the lifecycle stage is transitioned</inlineHelpText>
    <label>Require ContactRole on Opportunity</label>
    <type>Checkbox</type>
</CustomField>