force-app/main/default/objects/p2s_base1__Configuration__c/fields/p2s_base1__UseAccountAttributionOnOpportunity__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__UseAccountAttributionOnOpportunity__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If this field is checked, the account attribution settings will be used to calculate attribution for the opportunity paths.</description>
    <inlineHelpText>If this field is checked, the account attribution settings will be used to calculate attribution for the opportunity paths.</inlineHelpText>
    <label>Use Account Attribution on Opportunity</label>
    <type>Checkbox</type>
</CustomField>