force-app/main/default/objects/p2s_base1__Configuration__c/fields/p2s_base1__UseDashAccountStatus__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__UseDashAccountStatus__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this field is checked, Dash will use the p2s_base1__AccountStatus__c field for the Account Status</description>
    <inlineHelpText>If this field is checked, Dash will use the p2s_base1__AccountStatus__c field for the Account Status</inlineHelpText>
    <label>Use Dash Account Status</label>
    <type>Checkbox</type>
</CustomField>