force-app/main/default/objects/p2s_base1__Configuration__c/fields/p2s_base1__UseDashL2A__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__UseDashL2A__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this field is checked, the Engagio Dash managed package field for lead matching (p2s_base1__MatchedAccount__c) will be used for lead matching, regardless of the lead matching field.  This field takes priority over the Use Engagio L2A Field</description>
    <inlineHelpText>If this field is checked, the Engagio Dash managed package field for lead matching (p2s_base1__MatchedAccount__c) will be used for lead matching, regardless of the lead matching field.  This field takes priority over the Use Engagio L2A Field</inlineHelpText>
    <label>Use Dash L2A</label>
    <type>Checkbox</type>
</CustomField>