force-app/main/default/objects/p2s_base1__Configuration__c/fields/p2s_base1__UseEngagioAccountStatus__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__UseEngagioAccountStatus__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If this field is checked, the engagio__Status__c field will be used as the Account Status in the Dash application.</description>
    <inlineHelpText>If this field is checked, the engagio__Status__c field will be used as the Account Status in the Dash application.</inlineHelpText>
    <label>Use Engagio Account Status</label>
    <type>Checkbox</type>
</CustomField>