force-app/main/default/objects/p2s_base1__Configuration__c/fields/p2s_base1__UseEngagioAttribution__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__UseEngagioAttribution__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If this field is checked, p2s_base1__CampaignAttribution__c records will not be created by Dash.  They will be created by the Engagio integration of Campaign and Activity data</description>
    <inlineHelpText>If this field is checked, p2s_base1__CampaignAttribution__c records will not be created by Dash.  They will be created by the Engagio integration of Campaign and Activity data</inlineHelpText>
    <label>Use Engagio Attribution</label>
    <type>Checkbox</type>
</CustomField>