force-app/main/default/objects/p2s_base1__Configuration__c/recordTypes/p2s_base1__Account_and_Lead_Journeys.recordType-meta.xml
<RecordType>
    <fullName>p2s_base1__Account_and_Lead_Journeys</fullName>
    <active>true</active>
    <description>Configuration settings for both Account and Lead Journeys and Attribution</description>
    <label>Account and Lead Journeys</label>
</RecordType>