force-app/main/default/objects/p2s_base1__Configuration__c/recordTypes/p2s_base1__Account_Journey.recordType-meta.xml
<RecordType>
    <fullName>p2s_base1__Account_Journey</fullName>
    <active>true</active>
    <description>Configuration settings for defining Account Journey and Attribution</description>
    <label>Account Journey</label>
</RecordType>