force-app/main/default/objects/p2s_base1__Configuration__c/listViews/p2s_base1__All.listView-meta.xml
<ListView>
    <fullName>p2s_base1__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>